# agro_rover_ros

agro_rover/: CMakeLists.txt  package.xml
agro_rover/launch/: agroRover.launch  rover.launch
agro_rover/scripts/: Raspy_Subscriber.py  arduino_publisher.py  arduino_subscriber.py  frame_image.py  joystick_mapper_arduino.py  joystick_mapper_rpi.py  joystick_publisher.py  js_sub.py  pub.py  rpi_subscriber.py  sub.py  webcam.py
rover/: Motor.ino  rover.ino
rover_test/: rover_test.ino
