<?xml version="1.0"?>
<package format="2">
  <name>agro_rover</name>
  <version>0.0.0</version>
  <description>The agro_rover package</description>
  <maintainer email="amal@todo.todo">amal</maintainer>
  <license>TODO</license>
  
  <!-- Specify build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>python3-serial</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rosserial</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rosserial</exec_depend>
  
  <export>
  </export>
</package>

